          quant_translate().
        - Imager::to_paletted() now checks for success/failure of 
          i_img_to_pal() correctly and does appropriate error handling.
        - i_writegif_low() did no error checking on the result of
          quant_translate(), it now does
        - we now test that trying to write a GIF image with no palette
          allowable by the quant options is a failure.
        - Imager::write() was doing nothing with the result of the call 
          to i_writegif_gen(), in particular it wasn't returning () on 
          failure.
        - added tests for paletted image handling and the methods
          specific to those images
        - the XS for i_setcolors() was missing the OUTPUT clause for
          RETVAL, and hence wasn't returning failure on failure.
        - supplying a sufficiently small scaling value could make the
          scale() method return an image with zero height or width.
          Several of the above together resolve 
          https://rt.cpan.org/Ticket/Display.html?id=7467
        - the void context warning for scale() now includes the callers
          filename/line (instead of the default of Imager.pm line 15xx)
        - Imager->new will now return undef if the dimensions or number of
          channels specified for an image are out of range.  An error
          message can be retrieved with Imager->errstr.
        - added the C<builtin> color specifier and the 
          Imager::Color::Table class which defines those colors.
          Resolves https://rt.cpan.org/Ticket/Display.html?id=2593
        - added the equals() method to Imager::Color.
          Resolves https://rt.cpan.org/Ticket/Display.html?id=2238

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/~addi/perl/Imager/

=================================================================
